style.css
body {
  background: #131846;
  font-family: Consolas, serif;
  padding-top: 58px;
}

.header {
  background-color: #2b2b2b;
  padding: 8px;
  font-size: 16px;
  top: 0;
  width: 100%;
  position: fixed;
}

.header a {
  float: left;
  text-align: center;
  padding: 8px;
  line-height: 20px;
  color: white;
}

.terminal, .terminal-wrapper {
  --background: #131846;
  --font-size: 20px;
}

.terminal .terminal-output div span {
  font-size: 20px;
  margin-bottom: 18px;
  color: white;
}

.cmd .prompt > span {
  font-size: 20px;
  margin-bottom: 16px;
}

.cmd span[data-text] span {
  font-size: 20px;
  color: white;
}

.t {
  margin: 16px;
  word-wrap: break-word;
}

#github-btn {
  font-size: 34px;
  color: white
}

